Create Application Data Model Migration
- Add data migration for initial application data model
- Remove Identity Server tables and references
- Rename Participants class to RoomMembership

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SmartChat.Server-59613C6F-16CC-4518-9D70-A550CCC26B17;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SmartChat;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
