Fix for Message Foreign Key Type
- Made foreign key long to match message id
- Remove faulty migration project reference in server project

--- a/Server/SmartChat.Server.csproj
+++ b/Server/SmartChat.Server.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\SmartChat.Data.Migrations\SmartChat.Data.Migrations.csproj" />
     <ProjectReference Include="..\Client\SmartChat.Client.csproj" />
+    <ProjectReference Include="..\Migrations\SmartChat.Data.Migrations.csproj" />
     <ProjectReference Include="..\Shared\SmartChat.Shared.csproj" />
   </ItemGroup>
 
