--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -8,12 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "IdentityServer": {
-    "Clients": {
-      "SmartChat.Client": {
-        "Profile": "IdentityServerSPA"
-      }
-    }
-  },
+  "JwtSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHARED",
+  "JwtIssuer": "https://localhost",
+  "JwtAudience": "https://localhost",
+  "JwtExpiryInDays": 1,
   "AllowedHosts": "*"
 }
